syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "UserMicroserviceServer";

message UserInfo {
  string id = 1;
  string nickname = 2;
  google.protobuf.Timestamp registration_date = 3;
  google.protobuf.StringValue avatar_link = 4;
}

message UserInfoRequest {
  string id = 5;
}

message UserInfoReply {
  UserInfo user = 6;
}

message UsersInfoRequest {
  repeated string ids = 7;
}

message UsersInfoReply {
  repeated UserInfo users = 8;
}

service UserMicroservice {
  rpc GetUserInfo (UserInfoRequest) returns (UserInfoReply);
  rpc GetUsersInfo (UsersInfoRequest) returns (UsersInfoReply);
}